refactor: move global css to style.css

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,3 +2,10 @@
 	font-family: 'Noto Sans KR', sans-serif;
 	color: #222;
 }
+
+:global(html, body, h1, h2, h3, h4, p, span, button) {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	box-sizing: border-box;
+}
